plugins {
    id 'java'
    id 'org.springframework.boot' version '3.5.8-SNAPSHOT' apply false
    id 'io.spring.dependency-management' version '1.1.7' apply false
}

allprojects {
    group = 'com.filmpire'
    version = '1.0.0-SNAPSHOT'
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'io.spring.dependency-management'
    apply plugin: 'jacoco'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
        options.release = 25
    }

    tasks.withType(Test) {
        useJUnitPlatform()
        
        // Clean, readable test output
        testLogging {
            // Only show failures and skipped tests by default (less noise)
            // Use --info flag to see all tests: ./gradlew test --info
            events = ['failed', 'skipped']
            exceptionFormat = 'full'
            showStandardStreams = false
            showCauses = true
            showStackTraces = true
            
            // Show test class progress
            info {
                events = ['started', 'passed', 'skipped', 'failed']
                exceptionFormat = 'full'
            }
            
            // Summary at the end
            afterSuite { desc, result ->
                if (!desc.parent) {
                    def output = "Results: ${result.resultType} (${result.testCount} tests, ${result.successfulTestCount} passed, ${result.failedTestCount} failed, ${result.skippedTestCount} skipped)"
                    def startItem = '|  ', endItem = '  |'
                    def repeatLength = startItem.length() + output.length() + endItem.length()
                    println('\n' + ('=' * repeatLength))
                    println(startItem + output + endItem)
                    println('=' * repeatLength)
                }
            }
        }
    }
    
    dependencyManagement {
        imports {
            mavenBom "org.springframework.boot:spring-boot-dependencies:${springBootVersion}"
            mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
        }
    }
    
    // JaCoco configuration for test coverage
    jacoco {
        toolVersion = "${jacocoVersion}"
    }
    
    jacocoTestReport {
        dependsOn test
        reports {
            xml.required = true
            html.required = true
        }
    }
    
    test {
        finalizedBy jacocoTestReport
    }
    
    // Common test dependencies
    dependencies {
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }
}

